--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A boilerplate example bot with command handler and reloadable commands. Updated and Maintained by the Idiot's Guide Community",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "node setup.js"
+    "start": "node index.js"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=8",
+    "npm": "*"
   },
   "repository": {
     "type": "git",
